Wed Jul 27 11:03:25 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.inl:

          Added additional code to give more information when the send_bytes
          fails.  This code is marked with "//remove" and
          "DUMP_FOR_PACKET_INFO"

          This code should be removed when the problem has been fixed.

        * performance-tests/DCPS/SimpleE2ETest/Reader.cpp:

          Fixed error with data size.

Tue Jul 26 22:33:28 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.cpp:
        
          Fixed PublisherImpl and Subscriber memory leak.
          
        * tests/DCPS/FooTest3_2/pub_id.txt:
        
          Removed test generated file.
          
Tue Jul 26 15:38:24 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * performance-tests/DCPS/TCPListenerTest/publisher.cpp:
        * performance-tests/DCPS/TCPListenerTest/subscriber.cpp:
        * performance-tests/DCPS/TCPListenerTest/Writer.cpp:
        * performance-tests/DCPS/TCPListenerTest/Writer.h:

          Correctly applied the _var and _ptr.
          
        * tests/DCPS/FooTest3_0/pub_id.txt:

          Removed test generated file.
          
Fri Jul 22 08:40:18 MST 2005  Scott Harris <harris_s@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpSendStrategy.cpp:

          Make SimpleTcpSendStrategy::send_bytes log the iovec array when
          sendv returns an unexpected errno in hopes of getting it to
          core when the sendv fails for AAC.  Hopefully this will shed
          some light on the problem.

Thu Jul 21 18:38:54 CDT 2005  Scott Harris <harris_s@ociweb.com>

        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.cpp: